--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port=3000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "pinia": "^2.2.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
